lab1/Test/L1-A-6-14.output
Error Type B at Line 3
Error Type B at Line 4
Error Type B at Line 7
Error Type A at Line 10
Error Type A at Line 11
Error Type A at Line 14
Error Type B at Line 18
Error Type B at Line 20
Error Type B at Line 22
