lab1/Test/L1-A-6-14.cmm
int DtcSexHbsxHdCu [ 1462587597 ] 

float rA ( struct H52GWfYrzp7Xa {
  struct cBld8SIV GCRzY44B1 = - / poj_C6TurnWQjmlfvqHO 
    * v6BG5lfEvUJdCO602Z / ozr1Hjv3kVq_52v && YbUKJk && 
    T4EwazxSnPIMLf || Un ;
  int = IibDPNlXEVGoi7aR , mCb ;
}tMSi3MVUAEZJ0r [ 2077299786 ] [ 866136559 ] , struct 
  {
  int aflyFNZANZY [ 1437225213 ] , Nens ^;
  float wABD7acyiAishC ';
}VaU8c1JhO [ 1041388005 ] ) {
}
float sBFvjPDJn ~[ 257904934 ] , MesLW5whj 

;
int A_ALTkhAKOr ( struct {
  float jJNeeyFCuUOXwq56 = ENPlKUClRCx84UJUAI , ;
}uzNZTbk , struct mZJxDS9htM9 GN4TMuDovytBwRwLGZ_ 
  , float ) {
}
== 